# backend-rs

./: .gitignore  Cargo.toml
src/: firestore.rs  loaders.rs  main.rs  models.rs  schema.rs
src/schema/: bounties.rs
