[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-cors = "^0.6"
actix-web-lab = "^0.19"
juniper = "0.15"
env_logger = "^0.10"
log = "^0.4"
chrono = { version = "^0.4", features = ["serde"] }
serde = "1.0.171"
serde_json = "1.0.103"
firestore = "0.32"
dataloader = "0.12"
async-trait = "0.1.30"
firebase-auth = "0.1"
tokio = "1.29.1"

